# qgre-engine

./: .pre-commit-config.yaml  ARCHITECTURE_DIAGRAMS.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: ask-grok.md  feature-loop.md  rl-staff.md  training-debug.md
.claude/hooks/: rl-context.py
.github/workflows/: lint.yml
docs/: PLAN-triton-wiring.md  PLAN.md  eli-leverage-review.md  energy-map.md  entropy-gated-reinforcement.md  fix-fused-logprobs-compiled-cache.md  modular-architecture-plan.md  modular-architecture-rejection.md  prd-fused-logprobs-fix.md  qgre-tutorial-system-spec.md  rejection-framework-fused-logprobs-fix.md
examples/hamiltonian/: config.yaml  config_smoke.yaml  generate_data.py  reward_fn.py  reward_fn_v2.py  system_prompts.py
examples/hypergraph/: config.yaml  reward_fn.py
examples/math/: config.yaml
qgre/: __init__.py  __main__.py  advantages.py  attention_analysis.py  attention_bonds.py  autograd_4bit.py  checkpoint.py  config.py  critic.py  curriculum.py  data.py  expression.py  fused_logprobs.py  generation.py  gradient_coherence.py  hints.py  logging.py  lora_dropout.py  lora_pro.py  lora_verify.py  memory_profile.py  reward_parsing.py  schema.py  segments.py  spans.py  sync_state.py  trainer.py  triton_logprobs.py  types.py  weight_bus.py  weight_export.py  weight_load.py
qgre/nemo_extracted/: kl.py  llds.py  logits.py  loss_functions.py
scripts/: analyze_attention_patterns.py  analyze_gradient_coherence.py  analyze_gradient_probe.py  compute_advantage_scale.py  gradient_probe.py  measure_embedding_distances.py  run_e2e_test.py  run_long_training.py  setup-dev.sh  test_gradient_coherence.py  tune_lora_kernels.py  verify_lora_checklist.py
tests/: conftest.py  test_advantages.py  test_attention_constraint.py  test_attention_fallback.py  test_checkpoint.py  test_consistency.py  test_critic.py  test_critic_target.py  test_data.py  test_egrs_gating.py  test_egrs_integration.py  test_egrs_matrix.py  test_equivalence.py  test_expression.py  test_fused_logprobs.py  test_gradient_coherence.py  test_hamiltonian_reward.py  test_hardening_regressions.py  test_hints.py  test_llds.py  test_logging.py  test_lora_pro.py  test_lora_verify.py  test_nemo_extracted.py  test_reward_parsing.py  test_schema.py  test_segments.py  test_smoke.py  test_spans.py  test_sync_state.py  test_trainer.py  test_triton_logprobs.py  test_tutorial.py  test_weight_loader_lifecycle.py  test_wiring.py
web/preview/state-spec/: index.html  meta.json  prd.html  rejection.html
web/preview/sync-state-leverage/: index.html  meta.json  prd.html  rejection.html
web/preview/training-context/: index.html  meta.json  prd.html  rejection.html
